--- a/testing_jia.ipynb
+++ b/testing_jia.ipynb
@@ -305,7 +305,11 @@
    "id": "37001744",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SuperpixelFeatureExtractor(region_size = 10):\n",
+    "    def __init__(self, region_size: int):\n",
+    "        self.region_size = region_size"
+   ]
   }
  ],
  "metadata": {
