--- a/testing_jia.ipynb
+++ b/testing_jia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "id": "2c01d438",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "id": "357dd7fe",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "id": "038c7728",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "37001744",
    "metadata": {},
    "outputs": [],
@@ -230,12 +230,15 @@
     "\n",
     "            mean_entropy = np.mean(entropy_map[labels == label])\n",
     "\n",
-    "            features.append({\n",
+    "            feature_dict = {\n",
     "                'label': label,\n",
     "                'mean_intensity': mean_intensity,\n",
     "                'std_intensity': std_intensity,\n",
     "                'entropy': mean_entropy\n",
-    "            })\n",
+    "            }\n",
+    "            print(feature_dict)\n",
+    "\n",
+    "            features.append(feature_dict)\n",
     "\n",
     "        return features\n",
     "\n",
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 126,
    "id": "8289831c",
    "metadata": {},
    "outputs": [
@@ -262,7 +265,7 @@
      "output_type": "stream",
      "text": [
       "num faces detected: 9\n",
-      "face centers: [(np.int32(49), np.int32(84)), (np.int32(418), np.int32(115)), (np.int32(104), np.int32(107)), (np.int32(247), np.int32(120)), (np.int32(483), np.int32(110)), (np.int32(566), np.int32(95)), (np.int32(182), np.int32(119)), (np.int32(201), np.int32(86)), (np.int32(332), np.int32(101))]\n",
+      "face centers: [(np.int32(418), np.int32(115)), (np.int32(49), np.int32(84)), (np.int32(104), np.int32(107)), (np.int32(247), np.int32(120)), (np.int32(483), np.int32(110)), (np.int32(566), np.int32(95)), (np.int32(182), np.int32(119)), (np.int32(332), np.int32(101)), (np.int32(201), np.int32(86))]\n",
       "landmark array shapes: [(68, 2), (68, 2), (68, 2), (68, 2), (68, 2), (68, 2), (68, 2), (68, 2), (68, 2)]\n"
      ]
     },
@@ -313,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "id": "ef0d1620",
    "metadata": {},
    "outputs": [
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "f9241cc7",
    "metadata": {},
    "outputs": [
@@ -356,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SLIC superpixel object: < cv2.ximgproc.SuperpixelSLIC 000001C50238F030>\n",
+      "SLIC superpixel object: < cv2.ximgproc.SuperpixelSLIC 000001C502C7F090>\n",
       "Number of superpixels: 216\n",
       "Labels shape: (360, 540)\n",
       "Contoured image shape: (360, 540, 3)\n"
@@ -379,10 +382,9 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[121]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mContoured image shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcontoured_img.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m sfe.display_superpixels(contoured_img)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m features = \u001b[43msfe\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbasic_superpixel_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_image_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mslic\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mExtracted superpixel features:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m features[:\u001b[32m5\u001b[39m]:\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[118]\u001b[39m\u001b[32m, line 81\u001b[39m, in \u001b[36mSuperpixelFeatureExtractor.basic_superpixel_features\u001b[39m\u001b[34m(self, img_path, slic_superpixels)\u001b[39m\n\u001b[32m     78\u001b[39m         y_min, y_max = \u001b[38;5;28mmax\u001b[39m(j - r, \u001b[32m0\u001b[39m), \u001b[38;5;28mmin\u001b[39m(j + r + \u001b[32m1\u001b[39m, img.shape[\u001b[32m1\u001b[39m])\n\u001b[32m     79\u001b[39m         neighborhood = img[x_min:x_max, y_min:y_max]\n\u001b[32m---> \u001b[39m\u001b[32m81\u001b[39m         hist, _ = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mhistogram\u001b[49m\u001b[43m(\u001b[49m\u001b[43mneighborhood\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbins\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m256\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m256\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdensity\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     82\u001b[39m         entropy_map[i, j] = -np.sum(hist * np.log(hist + \u001b[32m1e-7\u001b[39m))\n\u001b[32m     84\u001b[39m mean_entropy = np.mean(entropy_map[labels == label])\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jiakh\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\numpy\\lib\\_histograms_impl.py:794\u001b[39m, in \u001b[36mhistogram\u001b[39m\u001b[34m(a, bins, range, density, weights)\u001b[39m\n\u001b[32m    689\u001b[39m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_histogram_dispatcher)\n\u001b[32m    690\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mhistogram\u001b[39m(a, bins=\u001b[32m10\u001b[39m, \u001b[38;5;28mrange\u001b[39m=\u001b[38;5;28;01mNone\u001b[39;00m, density=\u001b[38;5;28;01mNone\u001b[39;00m, weights=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    691\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33mr\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    692\u001b[39m \u001b[33;03m    Compute the histogram of a dataset.\u001b[39;00m\n\u001b[32m    693\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    792\u001b[39m \n\u001b[32m    793\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m794\u001b[39m     a, weights = \u001b[43m_ravel_and_check_weights\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    796\u001b[39m     bin_edges, uniform_bins = _get_bin_edges(a, bins, \u001b[38;5;28mrange\u001b[39m, weights)\n\u001b[32m    798\u001b[39m     \u001b[38;5;66;03m# Histogram is an integer or a float array depending on the weights.\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jiakh\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\numpy\\lib\\_histograms_impl.py:299\u001b[39m, in \u001b[36m_ravel_and_check_weights\u001b[39m\u001b[34m(a, weights)\u001b[39m\n\u001b[32m    296\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    297\u001b[39m             \u001b[33m'\u001b[39m\u001b[33mweights should have the same shape as a.\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    298\u001b[39m     weights = weights.ravel()\n\u001b[32m--> \u001b[39m\u001b[32m299\u001b[39m a = \u001b[43ma\u001b[49m\u001b[43m.\u001b[49m\u001b[43mravel\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    300\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m a, weights\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[128]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mContoured image shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcontoured_img.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m sfe.display_superpixels(contoured_img)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m features = \u001b[43msfe\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbasic_superpixel_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_image_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mslic\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mExtracted superpixel features:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m features[:\u001b[32m5\u001b[39m]:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[125]\u001b[39m\u001b[32m, line 81\u001b[39m, in \u001b[36mSuperpixelFeatureExtractor.basic_superpixel_features\u001b[39m\u001b[34m(self, img_path, slic_superpixels)\u001b[39m\n\u001b[32m     78\u001b[39m         y_min, y_max = \u001b[38;5;28mmax\u001b[39m(j - r, \u001b[32m0\u001b[39m), \u001b[38;5;28mmin\u001b[39m(j + r + \u001b[32m1\u001b[39m, img.shape[\u001b[32m1\u001b[39m])\n\u001b[32m     79\u001b[39m         neighborhood = img[x_min:x_max, y_min:y_max]\n\u001b[32m---> \u001b[39m\u001b[32m81\u001b[39m         hist, _ = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mhistogram\u001b[49m\u001b[43m(\u001b[49m\u001b[43mneighborhood\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbins\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m256\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m256\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdensity\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     82\u001b[39m         entropy_map[i, j] = -np.sum(hist * np.log(hist + \u001b[32m1e-7\u001b[39m))\n\u001b[32m     84\u001b[39m mean_entropy = np.mean(entropy_map[labels == label])\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jiakh\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\numpy\\lib\\_histograms_impl.py:823\u001b[39m, in \u001b[36mhistogram\u001b[39m\u001b[34m(a, bins, range, density, weights)\u001b[39m\n\u001b[32m    820\u001b[39m first_edge, last_edge, n_equal_bins = uniform_bins\n\u001b[32m    822\u001b[39m \u001b[38;5;66;03m# Initialize empty histogram\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m823\u001b[39m n = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_equal_bins\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mntype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    825\u001b[39m \u001b[38;5;66;03m# Pre-compute histogram scaling factor\u001b[39;00m\n\u001b[32m    826\u001b[39m norm_numerator = n_equal_bins\n",
       "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
