--- a/test/testing_jia.ipynb
+++ b/test/testing_jia.ipynb
@@ -10,7 +10,8 @@
     "# append parent to path to allow imports\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.append(str(Path.cwd().parent)) "
+    "\n",
+    "sys.path.append(str(Path.cwd().parent))"
    ]
   },
   {
@@ -53,7 +54,9 @@
     "face_detector = FaceDetector()\n",
     "\n",
     "# Detect faces and landmarks in the image\n",
-    "img_rgb, face_rectangles, face_centers, landmarks_all_faces = face_detector.detect(img_path)\n",
+    "img_rgb, face_rectangles, face_centers, landmarks_all_faces = face_detector.detect(\n",
+    "    img_path\n",
+    ")\n",
     "\n",
     "# Display the detected faces and landmarks\n",
     "Utils.display(img_rgb)"
@@ -87,7 +90,6 @@
     }
    ],
    "source": [
-    "\n",
     "# %% Test MaskHandler\n",
     "# Test MaskHandler with the detected landmarks\n",
     "mask_handler = MaskHandler()\n",
@@ -131,11 +133,13 @@
    "source": [
     "# %% Test SuperpixelFeatureExtractor\n",
     "# Test SuperpixelFeatureExtractor with the test image\n",
-    "img_path = 'test_images/face.jpg'  # Replace with the actual image path\n",
+    "img_path = \"test_images/face.jpg\"  # Replace with the actual image path\n",
     "superpixel_extractor = SuperpixelFeatureExtractor(region_size=20, neighborhood_size=3)\n",
     "\n",
     "# Get SLIC superpixels\n",
-    "slic, contoured_img, labels, num_superpixels = superpixel_extractor.get_slic_superpixels(img_path)\n",
+    "slic, contoured_img, labels, num_superpixels = (\n",
+    "    superpixel_extractor.get_slic_superpixels(img_path)\n",
+    ")\n",
     "\n",
     "# Display the superpixels contours on the image\n",
     "Utils.display(contoured_img)\n",
@@ -150,7 +154,10 @@
     "lbp_features = superpixel_extractor.extract_local_binary_patterns(img_path, slic)\n",
     "\n",
     "# Show LBP and Lacunarity features for each superpixel\n",
-    "print(\"Local Binary Patterns and Lacunarity Features:\", len(lbp_features[0][\"lacunarity_vector\"]))\n"
+    "print(\n",
+    "    \"Local Binary Patterns and Lacunarity Features:\",\n",
+    "    len(lbp_features[0][\"lacunarity_vector\"]),\n",
+    ")"
    ]
   },
   {
