--- a/test/testing_lalit.ipynb
+++ b/test/testing_lalit.ipynb
@@ -15,7 +15,8 @@
     "# append parent to path to allow imports\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.append(str(Path.cwd().parent)) "
+    "\n",
+    "sys.path.append(str(Path.cwd().parent))"
    ]
   },
   {
@@ -56,7 +57,7 @@
     "fd = FaceDetector(\"../assets/lbfmodel.yaml\")\n",
     "mh = MaskHandler()\n",
     "\n",
-    "IMAGE_PATH = Path('test_images/face.jpg')"
+    "IMAGE_PATH = Path(\"test_images/face.jpg\")"
    ]
   },
   {
@@ -225,7 +226,9 @@
     }
    ],
    "source": [
-    "prior_face_masks, heatmaps, heatmaps_blended = mh.get_prior_face_masks(IMAGE_PATH, selected_pts)\n",
+    "prior_face_masks, heatmaps, heatmaps_blended = mh.get_prior_face_masks(\n",
+    "    IMAGE_PATH, selected_pts\n",
+    ")\n",
     "\n",
     "idx = 0\n",
     "Utils.display(prior_face_masks[idx])\n",
@@ -252,7 +255,9 @@
    "source": [
     "alpha = 0.8851773188792857\n",
     "lambda_ = 0.0006174988170846915\n",
-    "skin_pixel_maps = mh.get_skin_pixel_maps(IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_)\n",
+    "skin_pixel_maps = mh.get_skin_pixel_maps(\n",
+    "    IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_\n",
+    ")\n",
     "\n",
     "skin_pixel_maps = [Utils.morphological_cleanup(s) for s in skin_pixel_maps]\n",
     "\n",
