--- a/test/testing_rachit.ipynb
+++ b/test/testing_rachit.ipynb
@@ -59,7 +59,7 @@
     "fd = FaceDetector(\"../assets/lbfmodel.yaml\")\n",
     "mh = MaskHandler()\n",
     "\n",
-    "IMAGE_PATH = Path('test_images/face.jpg')"
+    "IMAGE_PATH = Path(\"test_images/face.jpg\")"
    ]
   },
   {
@@ -236,7 +236,9 @@
     }
    ],
    "source": [
-    "prior_face_masks, heatmaps, heatmaps_blended = mh.get_prior_face_masks(IMAGE_PATH, selected_pts)\n",
+    "prior_face_masks, heatmaps, heatmaps_blended = mh.get_prior_face_masks(\n",
+    "    IMAGE_PATH, selected_pts\n",
+    ")\n",
     "\n",
     "print(len(prior_face_masks))\n",
     "print(len(heatmaps))\n",
@@ -275,7 +277,9 @@
     "alpha = 0.69\n",
     "lambda_ = 0.0018\n",
     "\n",
-    "skin_pixel_maps = mh.get_skin_pixel_maps(IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_)\n",
+    "skin_pixel_maps = mh.get_skin_pixel_maps(\n",
+    "    IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_\n",
+    ")\n",
     "\n",
     "for i in skin_pixel_maps:\n",
     "    Utils.display(i, cmap=\"gray\")"
@@ -351,7 +355,9 @@
     }
    ],
    "source": [
-    "prior_face_masks, heatmaps, heatmaps_blended = mh.get_prior_face_masks(IMAGE_PATH, selected_pts)\n",
+    "prior_face_masks, heatmaps, heatmaps_blended = mh.get_prior_face_masks(\n",
+    "    IMAGE_PATH, selected_pts\n",
+    ")\n",
     "\n",
     "print(len(prior_face_masks))\n",
     "print(len(heatmaps))\n",
@@ -390,7 +396,9 @@
     "alpha = 0.69\n",
     "lambda_ = 0.0018\n",
     "\n",
-    "skin_pixel_maps = mh.get_skin_pixel_maps(IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_)\n",
+    "skin_pixel_maps = mh.get_skin_pixel_maps(\n",
+    "    IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_\n",
+    ")\n",
     "\n",
     "for i in skin_pixel_maps:\n",
     "    Utils.display(i, cmap=\"gray\")"
@@ -13775,7 +13783,9 @@
    },
    "outputs": [],
    "source": [
-    "individual_feature_probs, norm_params = fe.calculate_feature_learned_probability(feature_vectors_sp, feature_vector)"
+    "individual_feature_probs, norm_params = fe.calculate_feature_learned_probability(\n",
+    "    feature_vectors_sp, feature_vector\n",
+    ")"
    ]
   },
   {
@@ -13878,7 +13888,10 @@
    },
    "outputs": [],
    "source": [
-    "initial_combined_probs_list = [{'label': item['label'], 'initial_combined_prob': item['p']} for item in combined_probability]"
+    "initial_combined_probs_list = [\n",
+    "    {\"label\": item[\"label\"], \"initial_combined_prob\": item[\"p\"]}\n",
+    "    for item in combined_probability\n",
+    "]"
    ]
   },
   {
@@ -13893,7 +13906,13 @@
    },
    "outputs": [],
    "source": [
-    "final_skin_labels = region_grower.grow(feature_vectors_sp, initial_combined_probs_list, labels, actual_seed_labels, norm_params)"
+    "final_skin_labels = region_grower.grow(\n",
+    "    feature_vectors_sp,\n",
+    "    initial_combined_probs_list,\n",
+    "    labels,\n",
+    "    actual_seed_labels,\n",
+    "    norm_params,\n",
+    ")"
    ]
   },
   {
@@ -13932,14 +13951,16 @@
     "skin_region_mask = np.zeros_like(labels, dtype=np.uint8)\n",
     "for label_val in final_skin_labels:\n",
     "    skin_region_mask[labels == label_val] = 255\n",
-    "Utils.display(skin_region_mask, title='final skin mask i am so fucking done', cmap='gray')\n",
+    "Utils.display(\n",
+    "    skin_region_mask, title=\"final skin mask i am so fucking done\", cmap=\"gray\"\n",
+    ")\n",
     "\n",
     "img_gray_orig = cv2.imread(IMAGE_PATH, cv2.IMREAD_GRAYSCALE)\n",
     "img_rgb_orig = cv2.cvtColor(img_gray_orig, cv2.COLOR_GRAY2RGB)\n",
     "overlay = np.zeros_like(img_rgb_orig)\n",
-    "overlay[skin_region_mask] = [0,255,0]\n",
+    "overlay[skin_region_mask] = [0, 255, 0]\n",
     "result_img = cv2.addWeighted(img_rgb_orig, 0.7, overlay, 0.3, 0)\n",
-    "Utils.display(result_img, title='overlap or smth idk what im doing atp')"
+    "Utils.display(result_img, title=\"overlap or smth idk what im doing atp\")"
    ]
   },
   {
