learned probability + superpixel skin probability

--- a/test/testing_lalit.ipynb
+++ b/test/testing_lalit.ipynb
@@ -57,7 +57,7 @@
     "fd = FaceDetector(\"../assets/lbfmodel.yaml\")\n",
     "mh = MaskHandler()\n",
     "\n",
-    "IMAGE_PATH = Path('test_images/helen1.jpg')"
+    "IMAGE_PATH = Path(\"test_images/helen1.jpg\")"
    ]
   },
   {
@@ -262,7 +262,15 @@
    "source": [
     "alpha = 0.9\n",
     "lambda_ = 0.0018\n",
-    "skin_pixel_maps = mh.get_skin_pixel_maps(IMAGE_PATH, intensity_histograms, prior_face_masks, alpha, lambda_, selected_pts, True)\n",
+    "skin_pixel_maps = mh.get_skin_pixel_maps(\n",
+    "    IMAGE_PATH,\n",
+    "    intensity_histograms,\n",
+    "    prior_face_masks,\n",
+    "    alpha,\n",
+    "    lambda_,\n",
+    "    selected_pts,\n",
+    "    True,\n",
+    ")\n",
     "\n",
     "skin_pixel_maps = [Utils.morphological_cleanup(s) for s in skin_pixel_maps]\n",
     "\n",
